<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_s2"
    android:orientation="vertical"
    tools:context=".DetailActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <ImageView
        android:id="@+id/movieImageViewId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/titleTextViewId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_s4"
        android:textAlignment="center"
        android:text="@string/title" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:padding="@dimen/margin_s"
            android:textSize="@dimen/text_s2"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="@string/rating"/>
        <TextView
            android:id="@+id/ratingTextViewId"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:padding="@dimen/margin_s"
            android:layout_height="wrap_content"
            android:text="@string/rating" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:padding="@dimen/margin_s"
            android:textSize="@dimen/text_s2"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="@string/genre"/>
        <TextView
            android:id="@+id/genreTextViewId"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:padding="@dimen/margin_s"
            android:layout_height="wrap_content"
            android:text="@string/genre" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:padding="@dimen/margin_s"
            android:textSize="@dimen/text_s2"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="@string/language"/>
        <TextView
            android:id="@+id/languageTextViewId"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:padding="@dimen/margin_s"
            android:layout_height="wrap_content"
            android:text="@string/language" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:padding="@dimen/margin_s"
            android:textSize="@dimen/text_s2"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="@string/release_date"/>
        <TextView
            android:id="@+id/releaseDateTextViewId"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:padding="@dimen/margin_s"
            android:layout_height="wrap_content"
            android:text="@string/release_date" />
    </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:padding="@dimen/margin_s"
                android:textSize="@dimen/text_s2"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text="@string/cast"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/castRecycleViewId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:padding="@dimen/margin_s"
            android:textSize="@dimen/text_s2"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="@string/description"/>
        <TextView
            android:id="@+id/descriptionTextViewId"
            android:layout_width="match_parent"
            android:padding="@dimen/margin_s"
            android:layout_height="wrap_content"
            android:text="@string/description" />
    </LinearLayout>
        <ImageView
            android:id="@+id/emptyHeartIconImageViewId"
            android:layout_width="@dimen/margin_s6"
            android:layout_height="@dimen/margin_s6"
            android:layout_marginTop="@dimen/margin_s2"
            android:layout_gravity="center"
            android:src="@drawable/ic_favorite"
            />
    </LinearLayout>
    </ScrollView>

</LinearLayout>