<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_s2"
    android:orientation="vertical"
    tools:context=".DetailActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/castImageViewId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/castNameTextViewId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_s2"
                android:textAlignment="center"
                android:text="@string/name" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:padding="@dimen/margin_s"
                    android:textSize="@dimen/text_s2"
                    android:textStyle="bold"

                    android:layout_height="wrap_content"
                    android:text="@string/rating"/>
                <TextView
                    android:id="@+id/ratingTextViewId"
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:padding="@dimen/margin_s"
                    android:layout_height="wrap_content"
                    android:text="@string/rating" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:padding="@dimen/margin_s"
                    android:textSize="@dimen/text_s2"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:text="@string/birthdate"/>
                <TextView
                    android:id="@+id/birthdateTextViewId"
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:padding="@dimen/margin_s"
                    android:layout_height="wrap_content"
                    android:text="@string/birthdate" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:padding="@dimen/margin_s"
                    android:textSize="@dimen/text_s2"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:text="@string/place_of_birth"/>
                <TextView
                    android:id="@+id/placeOfBirthTextViewId"
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:padding="@dimen/margin_s"
                    android:layout_height="wrap_content"
                    android:text="@string/place_of_birth" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:padding="@dimen/margin_s"
                    android:textSize="@dimen/text_s2"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:text="@string/also_known_by"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/knownByRecycleViewId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:padding="@dimen/margin_s"
                    android:textSize="@dimen/text_s2"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:text="@string/biography"/>
                <TextView
                    android:id="@+id/biographyTextViewId"
                    android:layout_width="match_parent"
                    android:padding="@dimen/margin_s"
                    android:layout_height="wrap_content"
                    android:text="@string/biography" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>