<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/mainLinear"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/bottomLinearLayoutId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/popularLinearLayoutId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_s"
                    android:text="@string/popular_movies"
                    android:textSize="@dimen/text_s6"
                    android:textStyle="bold" />
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/popularMovieRecyclerViewId"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="@dimen/margin_s1"
                    android:background="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/latestLinearLayoutId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_s"
                    android:text="@string/latest_movies"
                    android:textSize="@dimen/text_s6"
                    android:textStyle="bold" />
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/upcomingMovieRecyclerViewId"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="@dimen/margin_s1"
                    android:background="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/popularTVLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_s"
                    android:text="@string/popular_tv"
                    android:textSize="@dimen/text_s6"
                    android:textStyle="bold" />
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/popularTVRecyclerViewId"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="@dimen/margin_s1"
                    android:background="@color/black" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
<LinearLayout
    android:id="@+id/bottomLinearLayoutId"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    android:background="@color/teal_700"
    android:gravity="center"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/homeLinearLayoutId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        android:paddingStart="@dimen/margin_s1"
        android:paddingTop="@dimen/margin_s1"
        android:paddingEnd="@dimen/margin_s1"
        android:paddingBottom="@dimen/margin_s1">
        <ImageView
            android:id="@+id/homeImageViewId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_home" />
        <TextView
            android:id="@+id/homeTextViewId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/home"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/favoriteLinearLayoutId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_s1"
        android:layout_marginEnd="@dimen/margin_s1"
        android:orientation="vertical"
        android:paddingStart="@dimen/margin_s1"
        android:paddingTop="@dimen/margin_s1"
        android:paddingEnd="@dimen/margin_s1"
        android:paddingBottom="@dimen/margin_s1">

        <ImageView
            android:id="@+id/favortieImageViewId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_favorite" />

        <TextView
            android:id="@+id/favoriteTextViewId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/favorite"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/searchLinearLayoutId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_s1"
        android:layout_marginEnd="@dimen/margin_s1"
        android:orientation="vertical"
        android:paddingStart="@dimen/margin_s1"
        android:paddingTop="@dimen/margin_s1"
        android:paddingEnd="@dimen/margin_s1"
        android:paddingBottom="@dimen/margin_s1">
        <ImageView
            android:id="@+id/searchImageViewId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_search" />
        <TextView
            android:id="@+id/searchTextViewId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/search"
            android:textAlignment="center" />
    </LinearLayout>
</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>