<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".SearchActivity">
    <TextView
        android:id="@+id/textTitleForFavoriteId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/favorite_movies"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="@dimen/text_s6"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchRecycleViewId"
        app:layout_constraintTop_toBottomOf="@id/textTitleForFavoriteId"
        app:layout_constraintBottom_toTopOf="@id/bottomLinearLayoutId"
        android:layout_margin="@dimen/margin_s2"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>
    <LinearLayout
        android:id="@+id/bottomLinearLayoutId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/teal_700"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/homeLinearLayoutId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical"
            android:paddingStart="@dimen/margin_s1"
            android:paddingTop="@dimen/margin_s1"
            android:paddingEnd="@dimen/margin_s1"
            android:paddingBottom="@dimen/margin_s1">
            <ImageView
                android:id="@+id/homeImageViewId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_home" />
            <TextView
                android:id="@+id/homeTextViewId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/home"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/favoriteLinearLayoutId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_s1"
            android:layout_marginEnd="@dimen/margin_s1"
            android:orientation="vertical"
            android:paddingStart="@dimen/margin_s1"
            android:paddingTop="@dimen/margin_s1"
            android:paddingEnd="@dimen/margin_s1"
            android:paddingBottom="@dimen/margin_s1">

            <ImageView
                android:id="@+id/favortieImageViewId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_favorite" />

            <TextView
                android:id="@+id/favoriteTextViewId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/favorite"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/searchLinearLayoutId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_s1"
            android:layout_marginEnd="@dimen/margin_s1"
            android:orientation="vertical"
            android:paddingStart="@dimen/margin_s1"
            android:paddingTop="@dimen/margin_s1"
            android:paddingEnd="@dimen/margin_s1"
            android:paddingBottom="@dimen/margin_s1">
            <ImageView
                android:id="@+id/searchImageViewId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_search" />
            <TextView
                android:id="@+id/searchTextViewId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/search"
                android:textAlignment="center" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>